--- a/src/components/WorkExperience/work.css
+++ b/src/components/WorkExperience/work.css
@@ -16,7 +16,7 @@
 }
 
 .slide{
-   width: 60%;
+   width: 75%;
     padding: 4rem 0;
 
 }
@@ -66,4 +66,10 @@ img.bg2{
     right: 17%;
     bottom: -530px;
     width: 11.5%;
+}
+
+@media screen and (max-width:780px){
+    .slide{
+        width: 90%;
+    }
 }
