--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -8,7 +8,6 @@ footer{
 .mediaLogo-con{
     padding-top: 0.7rem;
     font-size: 2rem;
-
 }
 .mediaLogo{
    margin: 0rem 2rem;
@@ -19,10 +18,21 @@ footer{
 .footerLink{
     padding-top: 1rem;
     display: flex;
+    flex-direction: row;
     align-items: center;
+    display: flex;
+    flex-direction: row;
+    font-size: 1.2rem;
     
 }
-
+.footerlink1{
+    display: flex;
+    flex-direction: row;
+}
+.footerlink2{
+    display: flex;
+    flex-direction: row;
+}
 .footerLi{
     display: flex;
     padding: 0.1rem 2rem 0rem 2rem;
@@ -32,4 +42,37 @@ footer{
 .footerLi:hover{
     cursor: pointer;
     color: #9cbbeb;
+}
+
+@media screen and (max-width:650px){
+    footer{
+        flex-direction: row;
+    }
+    .footerLink{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .footerlink1{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .footerlink2{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+}
+
+@media screen and (max-width:500px){
+    footer{
+        flex-direction: column;
+    }
+    .footerLink{
+        padding-top: 0.4rem;
+    }
+    .mediaLogo-con{
+        padding-top: 0.3rem;
+    }
 }
