--- a/src/components/Skill/skill1.css
+++ b/src/components/Skill/skill1.css
@@ -23,7 +23,6 @@
 
 }
 
-
 .react{
     display: flex;
 
@@ -140,4 +139,30 @@
 @keyframes html-animate{
     0%{width: 0px;}
     100%{width: 180px;}
+}
+
+@media screen and (max-width:750px){
+    .fontEnd{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 400px;
+       
+    }
+    .left{
+        padding: 0;
+        width: 280px;
+        
+    }
+    .right{
+        padding-left: 0px;
+        width: 280px;
+    }
+    .css, .react, .html,.js{
+        padding-bottom:1rem;
+
+
+    }
 }
