--- a/src/components/Skill/skill2.css
+++ b/src/components/Skill/skill2.css
@@ -141,3 +141,33 @@
     0%{width: 0px;}
     100%{width: 185px;}
 }
+
+
+@media screen and (max-width:750px){
+    .videoEdit{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 100%;
+        height: 400px;
+       
+    }
+    .videoLeft{
+        padding: 0;
+        width: 280px;
+        
+    }
+    .videoRight{
+        padding-left: 0px;
+        width: 280px;
+    }
+    .ae, .ai, .ps,.pr{
+        padding-bottom:1rem;
+
+
+    }
+    .adobeLogo{
+       
+    }
+}
