--- a/src/components/Skill/skill1.css
+++ b/src/components/Skill/skill1.css
@@ -40,16 +40,47 @@
 .react-inner{
     
     height: 20px;
-    background-color: #929292;
     position: relative;
     border-radius: 10px;
     animation: react-animate 1s forwards;
+    overflow: hidden;
 }
 
 @keyframes react-animate{
     0%{width: 0px;}
     100%{width: 155px;}
 }
+
+.react-inner::before{
+    content: "";
+    width: 500px;
+    height: 500px;
+    top: -100px;
+    left: -300px;
+    position: absolute;
+    z-index: 1;
+    background: linear-gradient(45deg, #ffcccc,#88bfd6);
+    animation: animate 2.5s linear infinite;
+    
+}
+@keyframes animate {
+    0%{
+      transform: rotate(0deg);
+    }
+    100%{
+      transform: rotate(365deg);
+    }
+  }
+
+  .react-inner::after{
+
+    content: "";
+    position: absolute;
+    inset: 5px;
+    background-color: white;
+    z-index: -1;
+    border-radius : 25px;
+  }
 
 .frontEndLogo{
     font-size: 4rem;
@@ -76,16 +107,47 @@
 .css-inner{
     
     height: 20px;
-    background-color: #929292;
     position: relative;
     border-radius: 10px;
     animation: css-animate 1.1s forwards;
+    overflow: hidden;
 }
 
 @keyframes css-animate{
     0%{width: 0px;}
     100%{width: 140px;}
 }
+
+.css-inner::before{
+    content: "";
+    width: 500px;
+    height: 500px;
+    top: -100px;
+    left: -300px;
+    position: absolute;
+    z-index: 1;
+    background: linear-gradient(45deg, #ffcccc,#88bfd6);
+    animation: animate 2.5s linear infinite;
+    
+}
+@keyframes animate {
+    0%{
+      transform: rotate(0deg);
+    }
+    100%{
+      transform: rotate(365deg);
+    }
+  }
+
+  .css-inner::after{
+
+    content: "";
+    position: absolute;
+    inset: 5px;
+    background-color: white;
+    z-index: -1;
+    border-radius : 25px;
+  }
 
 .js{
     display: flex;
@@ -107,12 +169,45 @@
     position: relative;
     border-radius: 10px;
     animation: js-animate 1.1s forwards;
+    overflow: hidden;
 }
 
 @keyframes js-animate{
     0%{width: 0px;}
     100%{width: 110px;}
 }
+
+.js-inner::before{
+    content: "";
+    width: 500px;
+    height: 500px;
+    top: -100px;
+    left: -112px;
+    position: absolute;
+    z-index: 1;
+    background: linear-gradient(45deg, #ffcccc,#88bfd6);
+    animation: animate 2.5s linear infinite;
+    
+}
+@keyframes animate {
+    0%{
+      transform: rotate(0deg);
+    }
+    100%{
+      transform: rotate(365deg);
+    }
+  }
+
+  .js-inner::after{
+
+    content: "";
+    position: absolute;
+    inset: 5px;
+    background-color: white;
+    z-index: -1;
+    border-radius : 25px;
+  }
+
 
 .html{
     display: flex;
@@ -134,12 +229,45 @@
     position: relative;
     border-radius: 10px;
     animation: html-animate 1s forwards;
+    overflow: hidden;
 }
 
 @keyframes html-animate{
     0%{width: 0px;}
     100%{width: 180px;}
 }
+
+
+.html-inner::before{
+    content: "";
+    width: 500px;
+    height: 500px;
+    top: -100px;
+    left: -50px;
+    position: absolute;
+    z-index: 1;
+    background: linear-gradient(45deg, #ffcccc,#88bfd6);
+    animation: animate 2.5s linear infinite;
+    
+}
+@keyframes animate {
+    0%{
+      transform: rotate(0deg);
+    }
+    100%{
+      transform: rotate(365deg);
+    }
+  }
+
+  .html-inner::after{
+
+    content: "";
+    position: absolute;
+    inset: 5px;
+    background-color: white;
+    z-index: -1;
+    border-radius : 25px;
+  }
 
 @media screen and (max-width:750px){
     .fontEnd{
