--- a/src/components/Skill/skill2.css
+++ b/src/components/Skill/skill2.css
@@ -41,16 +41,47 @@
 .ps-inner{
     
     height: 20px;
-    background-color: #929292;
     position: relative;
     border-radius: 10px;
     animation: react-animate 1s forwards;
+    overflow: hidden;
 }
 
 @keyframes ps-animate{
     0%{width: 0px;}
     100%{width: 150px;}
 }
+
+.ps-inner::before{
+    content: "";
+    width: 500px;
+    height: 500px;
+    top: -100px;
+    left: -300px;
+    position: absolute;
+    z-index: 1;
+    background: linear-gradient(45deg, #ffcccc,#88bfd6);
+    animation: animate 2.5s linear infinite;
+    
+}
+@keyframes animate {
+    0%{
+      transform: rotate(0deg);
+    }
+    100%{
+      transform: rotate(365deg);
+    }
+  }
+
+  .ps-inner::after{
+
+    content: "";
+    position: absolute;
+    inset: 5px;
+    background-color: white;
+    z-index: -1;
+    border-radius : 25px;
+  }
 
 .adobeLogo{
     font-size: 4rem;
@@ -80,12 +111,44 @@
     position: relative;
     border-radius: 10px;
     animation: ai-animate 1.1s forwards;
+    overflow: hidden;
 }
 
 @keyframes ai-animate{
     0%{width: 0px;}
     100%{width: 140px;}
 }
+
+.ai-inner::before{
+    content: "";
+    width: 500px;
+    height: 500px;
+    top: -100px;
+    left: -180px;
+    position: absolute;
+    z-index: 1;
+    background: linear-gradient(45deg, #ffcccc,#88bfd6);
+    animation: animate 2.5s linear infinite;
+    
+}
+@keyframes animate {
+    0%{
+      transform: rotate(0deg);
+    }
+    100%{
+      transform: rotate(365deg);
+    }
+  }
+
+  .ai-inner::after{
+
+    content: "";
+    position: absolute;
+    inset: 5px;
+    background-color: white;
+    z-index: -1;
+    border-radius : 25px;
+  }
 
 .ae{
     display: flex;
@@ -103,16 +166,47 @@
 .ae-inner{
     
     height: 20px;
-    background-color: #929292;
     position: relative;
     border-radius: 10px;
     animation: ae-animate 1.1s forwards;
+    overflow: hidden;
 }
 
 @keyframes ae-animate{
     0%{width: 0px;}
     100%{width: 110px;}
 }
+
+.ae-inner::before{
+    content: "";
+    width: 500px;
+    height: 500px;
+    top: -100px;
+    left: -280px;
+    position: absolute;
+    z-index: 1;
+    background: linear-gradient(45deg, #ffcccc,#88bfd6);
+    animation: animate 2.5s linear infinite;
+    
+}
+@keyframes animate {
+    0%{
+      transform: rotate(0deg);
+    }
+    100%{
+      transform: rotate(365deg);
+    }
+  }
+
+  .ae-inner::after{
+
+    content: "";
+    position: absolute;
+    inset: 5px;
+    background-color: white;
+    z-index: -1;
+    border-radius : 25px;
+  }
 
 .pr{
     display: flex;
@@ -124,7 +218,6 @@
 .pr-outer{
     width: 200px;
     height: 20px;
-    border: 1px solid #929292;
     border-radius: 10px;
     position: absolute;
 }
@@ -135,13 +228,43 @@
     position: relative;
     border-radius: 10px;
     animation: pr-animate 1s forwards;
+    overflow: hidden;
 }
 
 @keyframes pr-animate{
     0%{width: 0px;}
     100%{width: 185px;}
 }
+.pr-inner::before{
+    content: "";
+    width: 500px;
+    height: 500px;
+    top: -100px;
+    left: -200px;
+    position: absolute;
+    z-index: 1;
+    background: linear-gradient(45deg, #ffcccc,#88bfd6);
+    animation: animate 2.5s linear infinite;
+    
+}
+@keyframes animate {
+    0%{
+      transform: rotate(0deg);
+    }
+    100%{
+      transform: rotate(365deg);
+    }
+  }
 
+  .pr-inner::after{
+
+    content: "";
+    position: absolute;
+    inset: 5px;
+    background-color: white;
+    z-index: -1;
+    border-radius : 25px;
+  }
 
 @media screen and (max-width:750px){
     .videoEdit{
