--- a/src/components/WorkExperience/work.css
+++ b/src/components/WorkExperience/work.css
@@ -47,7 +47,7 @@
 }
 
 .card{
-    color: white;
+    color: #3F3D56;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -66,7 +66,7 @@
 img.bgimg{
     position: absolute;
     width: 100%;
-    top: 100px;
+    top: 150px;
     left: 0;
     z-index: -100;
 }
