--- a/src/components/Skill/skill2.css
+++ b/src/components/Skill/skill2.css
@@ -1,296 +1,336 @@
-.videoEdit{
-    display: grid;
-    grid-template-columns: 1fr 2fr;;
-    box-shadow: 2px 2px 40px 0px rgba(0, 0, 0, 0.2);
-    border-radius: 30px;
-    width: 700px;
-    height: 30vh;
-    align-items: center;
-    
+.videoEdit {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  ;
+  box-shadow: 2px 2px 40px 0px rgba(0, 0, 0, 0.2);
+  border-radius: 30px;
+  width: 700px;
+  height: 30vh;
+  align-items: center;
+
 }
 
-.videoLeft{
+.videoLeft {
+  display: flex;
+  flex-direction: column;
+  padding: 1.5rem;
+  padding-left: 2rem;
+
+}
+
+.videoRight {
+  display: flex;
+  flex-direction: column;
+  padding-left: 100px;
+
+}
+
+
+.ps {
+  display: flex;
+
+  align-items: center;
+  padding-bottom: 1.3rem;
+}
+
+.ps-outer {
+  width: 200px;
+  height: 20px;
+  border: 1px solid #929292;
+  border-radius: 10px;
+  position: absolute;
+}
+
+.ps-inner {
+  z-index: 1;
+  height: 20px;
+  position: relative;
+  border-radius: 10px;
+  animation: react-animate 1s forwards;
+  overflow: hidden;
+}
+
+@keyframes ps-animate {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 150px;
+  }
+}
+
+.ps-inner::before {
+  content: "";
+  width: 500px;
+  height: 500px;
+  top: -100px;
+  left: -300px;
+  position: absolute;
+  z-index: 1;
+  background: linear-gradient(45deg, #ffcccc, #88bfd6);
+  animation: animate 2.5s linear infinite;
+
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(365deg);
+  }
+}
+
+.ps-inner::after {
+
+  content: "";
+  position: absolute;
+  inset: 5px;
+  background-color: white;
+  z-index: -1;
+  border-radius: 25px;
+}
+
+.adobeLogo {
+  font-size: 4rem;
+  display: flex;
+  align-items: center;
+  padding-right: 1rem;
+  color: #3F3D56;
+}
+
+.ai {
+  display: flex;
+  align-items: center;
+
+}
+
+.ai-outer {
+  width: 200px;
+  height: 20px;
+  border: 1px solid #929292;
+  border-radius: 10px;
+  position: absolute;
+}
+
+.ai-inner {
+  z-index: 1;
+  height: 20px;
+  background-color: #929292;
+  position: relative;
+  border-radius: 10px;
+  animation: ai-animate 1.1s forwards;
+  overflow: hidden;
+}
+
+@keyframes ai-animate {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 140px;
+  }
+}
+
+.ai-inner::before {
+  content: "";
+  width: 500px;
+  height: 500px;
+  top: -100px;
+  left: -180px;
+  position: absolute;
+  z-index: 1;
+  background: linear-gradient(45deg, #ffcccc, #88bfd6);
+  animation: animate 2.5s linear infinite;
+
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(365deg);
+  }
+}
+
+.ai-inner::after {
+  z-index: 1;
+  content: "";
+  position: absolute;
+  inset: 5px;
+  background-color: white;
+  z-index: -1;
+  border-radius: 25px;
+}
+
+.ae {
+  display: flex;
+  align-items: center;
+
+}
+
+.ae-outer {
+  width: 200px;
+  height: 20px;
+  border: 1px solid #929292;
+  border-radius: 10px;
+  position: absolute;
+}
+
+.ae-inner {
+  z-index: 1;
+  height: 20px;
+  position: relative;
+  border-radius: 10px;
+  animation: ae-animate 1.1s forwards;
+  overflow: hidden;
+}
+
+@keyframes ae-animate {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 110px;
+  }
+}
+
+.ae-inner::before {
+  content: "";
+  width: 500px;
+  height: 500px;
+  top: -100px;
+  left: -280px;
+  position: absolute;
+  z-index: 1;
+  background: linear-gradient(45deg, #ffcccc, #88bfd6);
+  animation: animate 2.5s linear infinite;
+
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(365deg);
+  }
+}
+
+.ae-inner::after {
+
+  content: "";
+  position: absolute;
+  inset: 5px;
+  background-color: white;
+  z-index: -1;
+  border-radius: 25px;
+}
+
+.pr {
+  display: flex;
+  align-items: center;
+  padding-bottom: 1.3rem;
+
+}
+
+.pr-outer {
+  width: 200px;
+  height: 20px;
+  border-radius: 10px;
+  position: absolute;
+}
+
+.pr-inner {
+  z-index: 1;
+  height: 20px;
+  background-color: #929292;
+  position: relative;
+  border-radius: 10px;
+  animation: pr-animate 1s forwards;
+  overflow: hidden;
+}
+
+@keyframes pr-animate {
+  0% {
+    width: 0px;
+  }
+
+  100% {
+    width: 185px;
+  }
+}
+
+.pr-inner::before {
+  content: "";
+  width: 500px;
+  height: 500px;
+  top: -100px;
+  left: -200px;
+  position: absolute;
+  z-index: 1;
+  background: linear-gradient(45deg, #ffcccc, #88bfd6);
+  animation: animate 2.5s linear infinite;
+
+}
+
+@keyframes animate {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(365deg);
+  }
+}
+
+.pr-inner::after {
+
+  content: "";
+  position: absolute;
+  inset: 5px;
+  background-color: white;
+  z-index: -1;
+  border-radius: 25px;
+}
+
+@media screen and (max-width:750px) {
+  .videoEdit {
     display: flex;
     flex-direction: column;
-    padding: 1.5rem;
-    padding-left: 2rem;
-    
-}
-.videoRight{
-    display: flex;
-    flex-direction: column;
-    padding-left: 100px;
-
-}
-
-
-.ps{
-    display: flex;
-
+    justify-content: center;
     align-items: center;
-    padding-bottom: 1.3rem;
-}
+    width: 100%;
+    height: 400px;
 
-.ps-outer{
-    width: 200px;
-    height: 20px;
-    border: 1px solid #929292;
-    border-radius: 10px;
-    position: absolute;
-}
-.ps-inner{
-    
-    height: 20px;
-    position: relative;
-    border-radius: 10px;
-    animation: react-animate 1s forwards;
-    overflow: hidden;
-}
-
-@keyframes ps-animate{
-    0%{width: 0px;}
-    100%{width: 150px;}
-}
-
-.ps-inner::before{
-    content: "";
-    width: 500px;
-    height: 500px;
-    top: -100px;
-    left: -300px;
-    position: absolute;
-    z-index: 1;
-    background: linear-gradient(45deg, #ffcccc,#88bfd6);
-    animation: animate 2.5s linear infinite;
-    
-}
-@keyframes animate {
-    0%{
-      transform: rotate(0deg);
-    }
-    100%{
-      transform: rotate(365deg);
-    }
   }
 
-  .ps-inner::after{
+  .videoLeft {
+    padding: 0;
+    width: 280px;
 
-    content: "";
-    position: absolute;
-    inset: 5px;
-    background-color: white;
-    z-index: -1;
-    border-radius : 25px;
   }
 
-.adobeLogo{
-    font-size: 4rem;
-    display: flex;
-    align-items: center;
-    padding-right: 1rem;
-    color: #3F3D56;
-}
-
-.ai{
-    display: flex;
-    align-items: center;
- 
-}
-
-.ai-outer{
-    width: 200px;
-    height: 20px;
-    border: 1px solid #929292;
-    border-radius: 10px;
-    position: absolute;
-}
-.ai-inner{
-    
-    height: 20px;
-    background-color: #929292;
-    position: relative;
-    border-radius: 10px;
-    animation: ai-animate 1.1s forwards;
-    overflow: hidden;
-}
-
-@keyframes ai-animate{
-    0%{width: 0px;}
-    100%{width: 140px;}
-}
-
-.ai-inner::before{
-    content: "";
-    width: 500px;
-    height: 500px;
-    top: -100px;
-    left: -180px;
-    position: absolute;
-    z-index: 1;
-    background: linear-gradient(45deg, #ffcccc,#88bfd6);
-    animation: animate 2.5s linear infinite;
-    
-}
-@keyframes animate {
-    0%{
-      transform: rotate(0deg);
-    }
-    100%{
-      transform: rotate(365deg);
-    }
+  .videoRight {
+    padding-left: 0px;
+    width: 280px;
   }
 
-  .ai-inner::after{
+  .ae,
+  .ai,
+  .ps,
+  .pr {
+    padding-bottom: 1rem;
 
-    content: "";
-    position: absolute;
-    inset: 5px;
-    background-color: white;
-    z-index: -1;
-    border-radius : 25px;
+
   }
 
-.ae{
-    display: flex;
-    align-items: center;
- 
-}
-
-.ae-outer{
-    width: 200px;
-    height: 20px;
-    border: 1px solid #929292;
-    border-radius: 10px;
-    position: absolute;
-}
-.ae-inner{
-    
-    height: 20px;
-    position: relative;
-    border-radius: 10px;
-    animation: ae-animate 1.1s forwards;
-    overflow: hidden;
-}
-
-@keyframes ae-animate{
-    0%{width: 0px;}
-    100%{width: 110px;}
-}
-
-.ae-inner::before{
-    content: "";
-    width: 500px;
-    height: 500px;
-    top: -100px;
-    left: -280px;
-    position: absolute;
-    z-index: 1;
-    background: linear-gradient(45deg, #ffcccc,#88bfd6);
-    animation: animate 2.5s linear infinite;
-    
-}
-@keyframes animate {
-    0%{
-      transform: rotate(0deg);
-    }
-    100%{
-      transform: rotate(365deg);
-    }
-  }
-
-  .ae-inner::after{
-
-    content: "";
-    position: absolute;
-    inset: 5px;
-    background-color: white;
-    z-index: -1;
-    border-radius : 25px;
-  }
-
-.pr{
-    display: flex;
-    align-items: center;
-    padding-bottom: 1.3rem;
- 
-}
-
-.pr-outer{
-    width: 200px;
-    height: 20px;
-    border-radius: 10px;
-    position: absolute;
-}
-.pr-inner{
-    
-    height: 20px;
-    background-color: #929292;
-    position: relative;
-    border-radius: 10px;
-    animation: pr-animate 1s forwards;
-    overflow: hidden;
-}
-
-@keyframes pr-animate{
-    0%{width: 0px;}
-    100%{width: 185px;}
-}
-.pr-inner::before{
-    content: "";
-    width: 500px;
-    height: 500px;
-    top: -100px;
-    left: -200px;
-    position: absolute;
-    z-index: 1;
-    background: linear-gradient(45deg, #ffcccc,#88bfd6);
-    animation: animate 2.5s linear infinite;
-    
-}
-@keyframes animate {
-    0%{
-      transform: rotate(0deg);
-    }
-    100%{
-      transform: rotate(365deg);
-    }
-  }
-
-  .pr-inner::after{
-
-    content: "";
-    position: absolute;
-    inset: 5px;
-    background-color: white;
-    z-index: -1;
-    border-radius : 25px;
-  }
-
-@media screen and (max-width:750px){
-    .videoEdit{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-        height: 400px;
-       
-    }
-    .videoLeft{
-        padding: 0;
-        width: 280px;
-        
-    }
-    .videoRight{
-        padding-left: 0px;
-        width: 280px;
-    }
-    .ae, .ai, .ps,.pr{
-        padding-bottom:1rem;
-
-
-    }
-    .adobeLogo{
-       
-    }
+  .adobeLogo {}
 }
